# flint-code

./: .flint.toml.example  .gitignore  Cargo.toml  LICENSE  README.md  analysis_mcp.md  analysis_mcp_role.md  analysis_mcp_system.md  analysis_mcp_system_v2.md  analysis_memory.md  analysis_memory_role.md  analysis_memory_system.md  analysis_swarm_interagent.md  models.json  test-mcp-server.js  test_api.ps1
flint-agent/: Cargo.toml
flint-agent/src/: agent.rs  checkpoint.rs  lib.rs  session.rs  shell.rs  todo.rs  tool.rs
flint-cli/: Cargo.toml
flint-cli/src/: agnes_media.rs  cli.rs  config_ui.rs  display.rs  input.rs  main.rs  markdown.rs  model_ui.rs  prompt.rs  provider.rs  resume_ui.rs  session_import.rs  setup_ui.rs  tools.rs  tools.rs.old  typeahead.rs
flint-cli/src/repl/: auto_poke.rs  mod.rs  render.rs  shell.rs  slash.rs
flint-cli/src/repl/slash/: clear.rs  compact.rs  config.rs  help.rs  mcp.rs  memory.rs  mod.rs  model.rs  poke.rs  quit.rs  resume.rs  setup.rs  skills.rs  status.rs  swarm.rs  traits.rs  undo.rs  unknown.rs
flint-config/: Cargo.toml
flint-config/src/: config.rs  features.rs  lib.rs  skill.rs
flint-mcp/: Cargo.toml
flint-mcp/src/: client.rs  http_client.rs  lib.rs  manager.rs  protocol.rs  tool.rs
flint-mcp/tests/: integration.rs
flint-memory/: Cargo.toml
flint-memory/src/: core.rs  lib.rs  manager.rs  search.rs  store.rs  types.rs
flint-provider/: Cargo.toml
flint-provider/src/: anthropic.rs  lib.rs  openai.rs
flint-swarm/: Cargo.toml
flint-swarm/src/: agent.rs  endpoint.rs  lib.rs  log.rs  manager.rs  message.rs  output.rs  router.rs  tool.rs  types.rs
flint-swarm/tests/: repl_integration.rs  swarm_interaction.rs  swarm_tool_e2e.rs
flint-types/: Cargo.toml
flint-types/src/: lib.rs
scripts/: install.ps1  install.sh
skills/: code-review.md  explain.md  refactor.md
skills/test/: SKILL.md
tests/: test_import.rs  test_session_import.rs
