[package]
name = "flint-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime for flint"

[dependencies]
flint-types    = { workspace = true }
flint-provider = { workspace = true }
tokio          = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
futures        = { workspace = true }
async-trait    = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }
