[package]
name = "flint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for flint"

[[bin]]
name = "flint"
path = "src/main.rs"

[dependencies]
flint-types    = { workspace = true }
flint-config   = { workspace = true }
flint-provider = { workspace = true }
flint-agent    = { workspace = true }
flint-memory   = { workspace = true }
flint-mcp      = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
reqwest        = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap           = { version = "4", features = ["derive"] }
async-trait    = { workspace = true }
dotenvy        = "0.15"
glob           = "0.3"
ratatui        = "0.29"
crossterm      = "0.28"
unicode-width  = { workspace = true }
uuid           = { version = "1", features = ["v4"] }
dirs           = "5"
dunce          = "1"
enable-ansi-support = "0.2"
ctrlc          = "3"
