[package]
name = "flint-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for flint"

[dependencies]
flint-types   = { workspace = true }
flint-config  = { workspace = true }
flint-agent   = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
