[package]
name = "flint-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layered memory system for flint"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
dirs        = "5"
