[package]
name = "flint-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider abstraction for flint"

[dependencies]
flint-types = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
