[package]
name = "flint-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Swarm coordination system for flint agent harness"

[dependencies]
flint-types    = { workspace = true }
flint-agent    = { workspace = true }
flint-provider = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
async-trait    = { workspace = true }
reqwest        = { workspace = true }
futures        = { workspace = true }
glob           = "0.3"
dirs           = "5"
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }

[dev-dependencies]
futures        = { workspace = true }
